--- a/css/styles.css
+++ b/css/styles.css
@@ -76,18 +76,20 @@
     .header-container {
         display: flex;
         align-items: center;
+        justify-content: center;
     }
     
     /* Логотип */
     
     .logo {
-    padding-top: 25px 0px;
+    
     text-decoration: none;
     font-family: Raleway, sans-serif;
     font-style: normal;
     font-size: 26px;
     line-height: 1.2; 
     color: #2196F3;
+    padding: 25px 0px;
     margin-right: 93px;
     }
     
@@ -108,7 +110,6 @@
      font-size: 14px;
      line-height: 1.1;
      letter-spacing: 0.02em;
-     padding: 32px 0px;
      display: flex;
     }
     
@@ -195,6 +196,7 @@
     .service {
         background-color: var(--accent-color);
         color: #ffffff;
+        font-weight: 700;
         font-size: 16px;
         line-height: 1.8; 
         font-family: inherit;
@@ -237,6 +239,7 @@
     }
     
     .text {
+    color: #757575;   
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
@@ -244,7 +247,10 @@
     }
 
     .items {
-     width: 270px; 
+     width: 270px;
+    }
+    .items:not(:last-child) {
+    margin-right: 30px; 
     }
 
     .item-img {
@@ -254,7 +260,6 @@
         height: 120px;
         background-color: #F5F4FA;
         border-radius: 4px;
-        margin-right: 30px;
         margin-bottom: 30px;
     }
     
@@ -287,16 +292,18 @@
     }
     
     .staff {
-        display: flex;
+        display: flex; 
     }
-     
+    
+    .staff-box {
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    }
     .staff-img + .staff-img {
         margin-left: 30px;
     }
-    
+
     .staff-text {
     background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -311,6 +318,7 @@
     }
     
     .profession {
+    color: #757575;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.2;  
@@ -367,7 +375,6 @@
         align-items: center;
         margin-right: 30px;
     }
-    
 
     .clients-icon {
         color:#AFB1B8;
@@ -395,6 +402,7 @@
 
     .footer-row {
         display: flex;
+        justify-content: baseline;
     }
     
     .footer-logo {
@@ -404,7 +412,6 @@
         font-size: 26px;
         line-height: 1.2; 
         color: #2196F3;
-        margin-bottom: 20px;
     }
         
     .footer-logo-decor {
@@ -417,17 +424,17 @@
     font-size: 14px;
     line-height: 1.7;
     }
-    
+
     .contacts {
         color: var(--secondary-text-color);
         font-style: normal;
+        margin-top: 20px;
     }
     
-    .footer-nav:not(:last-child){
+    .contacts:not(:last-child) {
     margin-bottom: 9px;
     }
-    
-    
+
     .contacts:hover,
     .contacts:focus {
         color: #ffffff;
@@ -476,21 +483,20 @@
 
     /* Портфоліо */
 
-    .button-nav {
-    margin-bottom: -44px;
-    }
     
     .portfolio-nav {
         display: flex;
        justify-content: center;
+       margin-bottom: 50px;
     }
     
     .portfolio-button {
     background-color:#F5F4FA;
     color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.8; 
-    font-family: inherit;
     margin-right: 8px; 
     padding: 6px 22px;
     border: 0px
@@ -508,7 +514,12 @@
         display: flex;
         flex-wrap: wrap;
         gap: 30px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.8;
+        color: #757575;
     }
+
     .pictures {
         flex-basis: calc((100% - 2 * 30px) / 3);
     }
@@ -534,13 +545,6 @@
     font-size: 18px;
     line-height: 2;
     margin-bottom: 4px;
-    }
-
-    .about-card {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.8;
-    color: #757575;
     }
     
     .profession {
